tests/toy/neg/001666_mutation.toylang
program a = { while a sleep do sleep; } .
